# RAG-System-Retrieval-Benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: models.py  session.py
app/embeddings/: providers.py
app/evaluation/: artifacts.py  metrics.py  runner.py
app/ingestion/: chunking.py  pipeline.py  synthetic.py
app/observability/: metrics.py
app/retrievers/: base.py  factory.py  filters.py  hybrid.py  postgres.py  qdrant.py  router.py
app/schemas/: api.py  search.py
benchmarks/configs/: load.yaml  small.yaml
benchmarks/results/0aa30fb2-970b-40d7-9a3c-41d3681ff6cc/: results.csv  results.json  summary.md
benchmarks/results/5bc732d0-f8fa-47a0-acc8-e634d804838b/: results.csv  results.json  summary.md
docs/: benchmark_methodology.md  docker_access_note.md  result_artifacts.md
infra/: api.Dockerfile
infra/grafana/dashboards/: benchmark-quality-metrics.json  load-test-overview.json  postgresql-performance.json  qdrant-performance.json  retrieval-comparison.json  system-overview.json
infra/prometheus/: prometheus.yml
scripts/: benchmark.py  seed.py
tests/integration/: test_integration_placeholders.py
tests/performance/: locustfile.py
tests/unit/: test_benchmark_runner.py  test_chunking.py  test_embeddings.py  test_filters.py  test_fusion.py  test_grafana_dashboards.py  test_health.py  test_load_config.py  test_metrics.py  test_metrics_endpoint.py  test_qdrant_batching.py  test_query_router.py  test_synthetic_dataset.py
(+1 files in other folders)
